--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "ratha-ecom",
+  "name": "e-commerce-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "dayjs": "^1.11.0",
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
+    "@mui/icons-material": "5.5.1",
+    "@mui/material": "5.5.2",
+    "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
     "jwt-decode": "^3.1.2",
     "jwt-encode": "^1.0.1",
-    "miragejs": "^0.1.43",
-    "mockman-js": "^1.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "uuid": "^8.3.2"
+    "miragejs": "^0.1.41",
+    "mockman-js": "^1.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
